# spar7-rewired

./: BoM.txt  README.md  Spar7_rebuild.brd  Spar7_rebuild.sch  eagle.epf
3D_print/: README.md
3D_print/fusion360/: Hopper -  Alternative version v18.f3d
3D_print/step/: bottom_plate.step  bracket.step  coin chute_a.step  coin chute_b.step  coin tube.step  funnel.step  rotor.step  slider.step  top plate.step  tube bracket.step
3D_print/stl/: Coin Tube.stl  Top plate.stl  Tube bracket.stl  bottom_plate.stl  bracket.stl  coin chute_a.stl  coin chute_b.stl  funnel.stl  rotor.stl  slider.stl
electronics/: BoM.txt  README.md  Spar7_rebuild.brd  Spar7_rebuild.sch  eagle.epf
firmware/: CMakeLists.txt  Kconfig.projbuild  README.md  TODO.TXT  kconfig.projbuild  makespiffs.cmd  pytest_main.py  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/certs/chain/: span-cert-chain.crt
firmware/certs/priv/: 17khh6llcban3n-cert.crt
firmware/components/cmd_spar7/: CmakeLists.txt  cmd_spar7.c  cmd_spar7.h
firmware/components/cmd_system/: CMakeLists.txt  cmd_system.c
firmware/components/console_spar7/: CMakeLists.txt  console.c  console.h
firmware/components/dtls/: CMakeLists.txt  dtls.c  dtls.h
firmware/components/hal_spar7/: CMakeLists.txt  hal_spar7.c  hal_spar7.h
firmware/components/settings_spar7/: CMakeLists.txt  settings_spar7.c  settings_spar7.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  coap_client.c  coap_client.h  comms.c  comms.h  comms_config.h  comms_error.h  comms_events.h  filesystem.c  filesystem.h  idf_component.yml  log.h  main.c  wifi.c  wifi.h  z_coap.c  z_coap.h  z_funcs.c  z_funcs.h
